src/components/header.module.scss
@import '../styles/variables.scss';
@import '../styles/components.scss';

.header {
	//sticky
	position: fixed;
	top: 0;
	z-index: 100; /* this is optional and should be different for every project */
	display: flex;
	flex-grow: 1;
	flex-basis: auto;
	min-width: 100vw;
	height: 100%;
	align-items: center;
	justify-content: space-between;
	flex-direction: column;
	max-height: 90px;
	padding: 1rem;
	@media (min-width: 450px) {
		flex-direction: column;
		max-height: 140px;
		padding: 1rem;
	}
	@media (min-width: 900px) {
		padding: 1rem 2rem 0 2rem;
		max-height: 90px;
		flex-direction: row;
		justify-content: space-between;
	}
	@media (min-width: 1100px) {
		padding: 1rem 7rem 0 8rem;
		max-height: 90px;
		flex-direction: row;
		justify-content: space-between;
	}
}

.headerBG {
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
	width: 100%;
	height: 200%;
	background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
	transform: skewY(-6deg);
	transform-origin: top left;
}

.title {
	color: white;
	position: relative;
	text-decoration: none;
	padding-top: 1rem;
	font-size: 4rem;
	top: -200%;
	@media (min-width: 450px) {
		top: 0%;
		z-index: 200;
		opacity: 100%;
	}
	@media (min-width: 900px) {
		top: 0%;
		z-index: 200;
		opacity: 100%;
		padding: 0;
		font-size: 4rem;
	}
	@media (min-width: 1000px) {
		z-index: 200;
		opacity: 100%;
		padding: 0;
		top: -20%;
		font-size: $l-size;
	}
}

.nav-list {
	position: absolute;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	margin-top: 100px;
	list-style-type: none;
	margin: 0 1rem 0 1rem;
	@media (min-width: 450px) {
		flex-wrap: nowrap;
		top: 90%;
	}
	@media (min-width: 900px) {
		margin-top: $s-size;
		flex-wrap: nowrap;
		top: 0;
		right: $s-size;
	}
	@media (min-width: 1000px) {
		margin-top: $s-size;
		flex-wrap: nowrap;
		top: 0;
		right: $s-size;
	}
}
.nav-item {
	display: block;
	position: relative;
	font-size: $s-size;
	margin: 0;
	text-decoration: none;
	text-transform: uppercase;
	font-weight: bold;
	border: none;
	color: white;
	background-color: $off-black;
	padding: 1rem .5rem 1rem .5rem;
	transition: border .4s ease;
	// -webkit-transition: border .5s ease;
	&:not(.active-nav-item):hover {
		border-bottom: 20px solid $secondary-color;
		color: $secondary-color;
	}
}
.active-nav-item {
	color: white;
	font-size: 2rem;
	border-bottom: 20px solid $secondary-color;
	@media (min-width: 450px) {
		border-bottom: 40px solid $secondary-color;
		font-size: $m-size;
	}
}

